--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,14 @@ body > div {
 	left: 0;
 }
 
+.line {
+	left: 0;
+	width: 93px;
+	height: 5px;
+	margin: 10px 0;
+	background: black;
+}
+
 img {
 	display: block;
 	width: 150px;
